k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shows
  namespace: shows
  labels:
    app: shows
spec:
  type: ClusterIP
  selector:
    app: shows
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
